# Dr.-strange

./: .gitignore  .secret-scan-allowlist.json  .venv  AGENTS.md  BOOT.md  BOOT_PROTOCOL.md  CLAUDE.md  IDENTITY.md  MEMORY.md  Makefile  SOUL.md  TOOLS.md  USER.md  backtest_ict.py  backtest_ict_sweep.py  backtest_multi.py  btc_backtest.py  claw-v2.1-prd.md  pyproject.toml  schema.sql  start_claw.py
.firecrawl/: agents-best-practices.json  anthropic-agents.json  openai-agents.json
claw_v2/: AGENTS.md  CRON.md  EXPERIENCE_REPLAY.md  HEARTBEAT.md  INTERNAL_WIRING.md  SECURITY.md  SOUL.md  __init__.py  a2a.py  action_events.py  active_recall.py  agent_handler.py  agent_loop.py  agent_runtime.py  agents.py  ai_news.py  approval.py  approval_gate.py  approval_sensitivity.py  artifacts.py  automation_contracts.py  automation_outcome.py  automation_policy.py  behavior_audit_io.py  bot.py  bot_commands.py  bot_core_commands.py  bot_helpers.py  bot_post_commands.py  bot_skill_commands.py  brain.py  brain_execution.py  brain_json.py  brain_lifecycle.py  brain_prompt.py  brain_response.py  brain_structured.py  brain_turn.py  brain_verifier.py  brain_verifier_votes.py  (+160 more)
claw_v2.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
docs/: AUDIT_CLOSURE.md  DAEMON_CHECKOUT_ISOLATION_RUNBOOK.md  OPERATIONS_RUNBOOK.md  audit_success_condition_plan.md  deployment.md  observability.md  plan_cuellos_de_botella_2026-06.md  remediation_handoff.md  schema-migrations.md  secret_findings_triage.md
evals/: behavior_baseline.jsonl  thresholds.json
memory/: 2026-04-26.md  2026-04-30.md  2026-05-01.md  2026-05-03.md  2026-05-04.md  2026-05-15.md  2026-05-16.md  2026-05-17.md  2026-05-18.md  2026-05-19.md  2026-05-21.md  2026-05-27.md  2026-06-08.md  2026-06-11.md  2026-06-18.md  2026-06-19.md  2026-06-20.md  2026-06-21.md  2026-06-24.md  feedback_no_expose_adopt_selective.md  feedback_pragmatic_tool_adoption.md  feedback_verify_publish_actually_succeeded.md  linkedin_2026_dom_knowledge.md  project_weekly_content_cadence.md
ops/: claw-launcher.sh  (+10 more)
(+688 files in other folders)
