[project]
name = "claw-v2"
version = "0.1.0"
description = "Claw v2 multi-LLM agent scaffold"
readme = "claw-v2.1-prd.md"
requires-python = ">=3.13,<3.14"
dependencies = [
    "claude-agent-sdk",
    "openai",
    "google-genai",
    "ollama",
    "python-telegram-bot>=22.7,<23",
    "anthropic",
    "pyautogui",
    "rank-bm25",
    "pypdf",
    "playwright",
    "browser-use>=0.11.13",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["claw_v2*"]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
# Default select (E,F) plus an explicit ignore list for patterns this codebase
# uses on purpose, so `ruff check` is real signal and the self-improve promotion
# gate is deterministic (audit 2026-06-14 B6).
ignore = [
    "F403",  # `from claw_v2.bot_helpers import *` — intentional re-export hub
    "F405",  # names resolved through the star import above
    "E402",  # module-level import not at top — conditional/lazy imports are intentional
    "E741",  # ambiguous one-letter names — stylistic, not a defect
    "E731",  # lambda assigned to a variable — stylistic
]

[tool.ruff.lint.per-file-ignores]
# Forward-reference string annotations whose targets are imported lazily / under
# TYPE_CHECKING; ruff can't resolve them but they resolve fine at runtime.
"tests/test_brain_verify.py" = ["F821"]
"tests/test_checkpoint.py" = ["F821"]
"tests/test_notebooklm.py" = ["F821"]
